# emacs

./: README.md  _Packages_  cp-env.sh  init-ide-checker-flycheck.el  init-ide-checker-flymake.el  init-ide-facilities.el  init.el
.emacs.d/: compil-mode.el  init-buffer-nagigation.el  init-ide-facilities.el  init.el  my-cpp-facilites.el  my-grep.el  my-parse-log.el  my-projects.el  parse-evse.el
.emacs.d/trash/: init-my-ede-project.el
Code/LKM/: hello_1_init.c  hello_4_cdev_dev.c
Code/LKM-DMA/: Makefile.arm  at91_adc.c  at91_adc_pdc.c  at91_adc_pdc.h  cmd_adc_dma  hello_adc_dma.c  put.sh
Code/LKM-M12/: cmd  gpio_custom_debounced.c  log.h
Code/LKM/.tmp_versions/: at91_adc.mod  hello.mod  pwm-atmel-tcb-parking.mod
Code/LKM2/: modules.order  pwm-atmel-tcb-cpw.c
Code/LKM2/.tmp_versions/: pwm-atmel-hlcdc.mod  pwm-atmel-tcb-cpw.mod  pwm-atmel-tcb.mod  pwm-atmel.mod
Code/drivers/: pwm-atmel-tcb-cpw.c
Code/lisp/parsing/: log-to-csv.el  test.txt
Code/poco/PocoNet/: .#DemoWebSocketServer.cpp  DemoHTTPServer.cpp~  DemoSocketClient.cpp.ko  DemoSocketClient.cpp~  DemoSocketServer_.cpp~  Makefile~  setenv~  wiki~
Code/preload/src/: mymalloc.c
Code/qt/json/: main  main.cpp  main.cpp~  makefile~
Code/qt/net/: Makefile  my-project.el~  net.pro  run-test  run-test-websocket~  run-test~  run.sh~
Code/qt/net/client/: TcpClient.cpp  client
Code/qt/net/server/: .#TcpServer.cpp  TcpServer.cpp  TcpServer.h  server.pro
Code/qt/net/simple/: client.cpp~  server.cpp~
Code/qt/net/threadedserver/: TcpThread.cpp~  TcpThread.h~  ThreadedTcpServer.cpp~  ThreadedTcpServer.h~
Code/qt/net/websocketclient/: WebsocketClient.cpp
Code/smc/: Makefile.am  Test.cpp  Test.h  TestA.cpp  TestA.h  main.cpp  subtest.sm  test.sm  test_prodA.sm  test_sm.cpp  test_sm.h
Code/smc/merge/: Makefile.am
lisp/: compil-mode.el  flycheck-google-cpplint.el  my-cpp-facilites.el  my-grep.el  my-projects.el
